--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net
 
 | Title | Shield |
 |:---|:---|
-| <img src="git/devices/9290012573A.jpg"/> | <img src="git/devices/9290012573A.jpg"/> |
+| <img src="scr/1uasp.png"/> | <img src="scr/2foot.png"/> |
 
 </body>
 </html>
