--- a/index.html
+++ b/index.html
@@ -15,11 +15,41 @@ https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net
 https://risozhor.github.io/UMH-Projects/dengi/
 https://risozhor.github.io/UMH-Projects/evrovision2019
 https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+                    <a href="sp-pages/w45.html">
+                        <img src="img/45.png" class="sp-fullwidth">
+                        <div class="sp-description">
+                            <h3>Bang&Olufsen</h3>
+                            <ul>
+                                <li>Созвучны со временем: История датского чуда Bang&Olufsen</li>
+                            </ul>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+                    <a href="sp-pages/w44.html">
+                        <img src="img/44.png" class="sp-fullwidth">
+                        <div class="sp-description">
+                            <h3>Наша Ряба</h3>
+                            <ul>
+                                <li>Курица: что мы едим?</li>
+                            </ul>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
 
 
-| Title | Shield |
-|:---|:---|
-| <img src="scr/1uasp.png"/> | <img src="scr/2foot.png"/> |
+    <img src="scr/1uasp.png"/>
+    <img src="scr/2foot.png"/>
 
 </body>
 </html>
