--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body class="branding?">
 
-https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net
-https://risozhor.github.io/UMH-Projects/2020.footbal.ua
+
 https://risozhor.github.io/UMH-Projects/afisha
 https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net
 https://risozhor.github.io/UMH-Projects/dengi/
@@ -19,8 +18,8 @@ https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="sp-pages/w45.html">
-                        <img src="img/45.png" class="sp-fullwidth">
+                    <a href="https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net">
+                       <img src="scr/1uasp.png" class="sp-fullwidth">
                         <div class="sp-description">
                             <h3>Bang&Olufsen</h3>
                             <ul>
@@ -32,14 +31,8 @@ https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="sp-pages/w44.html">
-                        <img src="img/44.png" class="sp-fullwidth">
-                        <div class="sp-description">
-                            <h3>Наша Ряба</h3>
-                            <ul>
-                                <li>Курица: что мы едим?</li>
-                            </ul>
-                        </div>
+                    <a href="https://risozhor.github.io/UMH-Projects/2020.footbal.ua">
+                        <img src="scr/2foot.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
@@ -48,8 +41,6 @@ https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net
     </div>
 
 
-    <img src="scr/1uasp.png"/>
-    <img src="scr/2foot.png"/>
 
 </body>
 </html>
