--- a/index.html
+++ b/index.html
@@ -8,30 +8,53 @@
 </head>
 <body class="branding?">
 
-
-https://risozhor.github.io/UMH-Projects/afisha
-https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net
-https://risozhor.github.io/UMH-Projects/dengi/
-https://risozhor.github.io/UMH-Projects/evrovision2019
-https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net">
                        <img src="scr/1uasp.png" class="sp-fullwidth">
-                        <div class="sp-description">
-                            <h3>Bang&Olufsen</h3>
-                            <ul>
-                                <li>Созвучны со временем: История датского чуда Bang&Olufsen</li>
-                            </ul>
-                        </div>
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/2020.footbal.ua">
+                        <img src="scr/2foot.png" class="sp-fullwidth">
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+                    <a href="https://risozhor.github.io/UMH-Projects/afisha">
+                        <img src="scr/2foot.png" class="sp-fullwidth">
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+                    <a href="https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net">
+                        <img src="scr/2foot.png" class="sp-fullwidth">
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+                    <a href="https://risozhor.github.io/UMH-Projects/dengi/">
+                        <img src="scr/2foot.png" class="sp-fullwidth">
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+                    <a href="https://risozhor.github.io/UMH-Projects/evrovision2019">
+                        <img src="scr/2foot.png" class="sp-fullwidth">
+                    </a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+                    <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net">
                         <img src="scr/2foot.png" class="sp-fullwidth">
                     </a>
                 </div>
