--- a/index.html
+++ b/index.html
@@ -29,35 +29,35 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/afisha">
-                        <img src="scr/2foot.png" class="sp-fullwidth">
+                        <img src="scr/3.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net">
-                        <img src="scr/2foot.png" class="sp-fullwidth">
+                        <img src="scr/4.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/dengi/">
-                        <img src="scr/2foot.png" class="sp-fullwidth">
+                        <img src="scr/5.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/evrovision2019">
-                        <img src="scr/2foot.png" class="sp-fullwidth">
+                        <img src="scr/6.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net">
-                        <img src="scr/2foot.png" class="sp-fullwidth">
+                        <img src="scr/7.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
