--- a/index.html
+++ b/index.html
@@ -57,8 +57,50 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net">
-                        <img src="scr/7.png" class="sp-fullwidth">
+                        <img src="scr/itogi.png" class="sp-fullwidth">
                     </a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+<!--                     <a href="#"> -->
+                        <img src="scr/7.png" class="sp-fullwidth">
+<!--                     </a> -->
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                        <img src="scr/8.png" class="sp-fullwidth">
+<!--                     </a> -->
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                        <img src="scr/9.png" class="sp-fullwidth">
+<!--                     </a> -->
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                        <img src="scr/10.png" class="sp-fullwidth">
+<!--                     </a> -->
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                        <img src="scr/11.png" class="sp-fullwidth">
+<!--                     </a> -->
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
+                <div class="sp-square">
+<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                        <img src="scr/12.png" class="sp-fullwidth">
+<!--                     </a> -->
                 </div>
             </div>
         </div>
