--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/spkorr-custom.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <link href="css/lightbox.css" rel="stylesheet" />
+    
 </head>
 <body class="branding?">
 
@@ -108,6 +110,6 @@
     </div>
 
 
-
+<script src="js/lightbox.min.js"></script>
 </body>
 </html>
