--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net">
-                       <img src="scr/1uasp.png" class="sp-fullwidth">
+                       <img src="scr/1uasp.png" class="sp-fullwidth" data-lightbox="image-1" data-title="My caption">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/2020.footbal.ua">
-                        <img src="scr/2foot.png" class="sp-fullwidth">
+                        <img src="scr/2foot.png" class="sp-fullwidth" data-lightbox="image-1" data-title="2020.footbal.ua">
                     </a>
                 </div>
             </div>
@@ -110,6 +110,6 @@
     </div>
 
 
-<script src="js/lightbox.min.js"></script>
+<script src="js/lightbox-plus-jquery.min"></script>
 </body>
 </html>
