--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 <!--                     </a> -->
                 </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
-                <div class="sp-square">
+<!--             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center"> -->
+<!--                 <div class="sp-square"> -->
 <!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
-                        <img src="scr/12.png" class="sp-fullwidth">
+<!--                         <img src="scr/12.png" class="sp-fullwidth"> -->
 <!--                     </a> -->
-                </div>
-            </div>
+<!--                 </div> -->
+<!--             </div> -->
         </div>
         
     </div>
