--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
     </div>
 
 
-<script src="js/lightbox-plus-jquery.min"></script>
+<script src="js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
