--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net">
-                       <img src="scr/1uasp.png" class="sp-fullwidth" data-lightbox="image-1" data-title="My caption">
+                    <a href="scr/1uasp.png" data-lightbox="image-1" data-title="My caption">
+                       <img src="scr/1uasp.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="https://risozhor.github.io/UMH-Projects/2020.footbal.ua">
-                        <img src="scr/2foot.png" class="sp-fullwidth" data-lightbox="image-1" data-title="2020.footbal.ua">
+                    <a href="scr/2foot.png" data-lightbox="image-1" data-title="2020.footbal.ua">
+                        <img src="scr/2foot.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
