--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="https://risozhor.github.io/UMH-Projects/afisha">
+                    <a href="scr/3.png" data-lightbox="3" data-title="afisha">
                         <img src="scr/3.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net">
+                    <a href="scr/4.png" data-lightbox="4" data-title="alexandrion.korrespondent.net">
                         <img src="scr/4.png" class="sp-fullwidth">
                     </a>
                 </div>
@@ -45,6 +45,7 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/dengi/">
+                    <a href="scr/5.png" data-lightbox="5" data-title="alexandrion.korrespondent.net">
                         <img src="scr/5.png" class="sp-fullwidth">
                     </a>
                 </div>
@@ -52,6 +53,7 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/evrovision2019">
+                    <a href="scr/6.png" data-lightbox="6" data-title="alexandrion.korrespondent.net">
                         <img src="scr/6.png" class="sp-fullwidth">
                     </a>
                 </div>
@@ -59,43 +61,44 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net">
+                    <a href="scr/itogi.png" data-lightbox="itogi" data-title="alexandrion.korrespondent.net">
                         <img src="scr/itogi.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-<!--                     <a href="#"> -->
+                    <a href="scr/7.png" data-lightbox="7" data-title="alexandrion.korrespondent.net">
                         <img src="scr/7.png" class="sp-fullwidth">
-<!--                     </a> -->
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                    <a href="scr/8.png" data-lightbox="8" data-title="kolobok">
                         <img src="scr/8.png" class="sp-fullwidth">
-<!--                     </a> -->
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                    <a href="scr/9.png" data-lightbox="9" data-title="smak">
                         <img src="scr/9.png" class="sp-fullwidth">
-<!--                     </a> -->
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                    <a href="scr/10.png" data-lightbox="10" data-title="tochka.ua">
                         <img src="scr/10.png" class="sp-fullwidth">
-<!--                     </a> -->
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                    <a href="scr/11.png" data-lightbox="11" data-title="TV.UA">
                         <img src="scr/11.png" class="sp-fullwidth">
-<!--                     </a> -->
+                    </a>
                 </div>
             </div>
 <!--             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center"> -->
