--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     
 </head>
 <body class="branding?">
-
     <div class="container">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
@@ -60,15 +59,15 @@
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net">
-                    <a href="scr/itogi.png" data-lightbox="itogi" data-title="alexandrion.korrespondent.net">
+<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
+                    <a href="scr/itogi.png" data-lightbox="itogi" data-title="itogi2020.korrespondent.net">
                         <img src="scr/itogi.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-                    <a href="scr/7.png" data-lightbox="7" data-title="alexandrion.korrespondent.net">
+                    <a href="scr/7.png" data-lightbox="7" data-title="gloss.ua">
                         <img src="scr/7.png" class="sp-fullwidth">
                     </a>
                 </div>
