--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/dengi/">
-                    <a href="scr/5.png" data-lightbox="5" data-title="alexandrion.korrespondent.net">
+                    <a href="scr/5.png" data-lightbox="5" data-title="https://dengi.ua/">
                         <img src="scr/5.png" class="sp-fullwidth">
                     </a>
                 </div>
@@ -52,14 +52,13 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
                     <a href="https://risozhor.github.io/UMH-Projects/evrovision2019">
-                    <a href="scr/6.png" data-lightbox="6" data-title="alexandrion.korrespondent.net">
+                    <a href="scr/6.png" data-lightbox="6" data-title="evrovision 2019">
                         <img src="scr/6.png" class="sp-fullwidth">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center">
                 <div class="sp-square">
-<!--                     <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net"> -->
                     <a href="scr/itogi.png" data-lightbox="itogi" data-title="itogi2020.korrespondent.net">
                         <img src="scr/itogi.png" class="sp-fullwidth">
                     </a>
