--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center"> -->
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center"> 
                 <div class="sp-square">
-                    <a href="https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net" target="_blank">uasp.korrespondent.net </a>
-                    <a href="https://risozhor.github.io/UMH-Projects/2020.footbal.ua " target="_blank">2020.footbal.ua</a>
-                    <a href="https://risozhor.github.io/UMH-Projects/afisha " target="_blank">afisha</a>
-                    <a href="https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net" target="_blank">alexandrion.korrespondent.net</a>
-                    <a href="https://risozhor.github.io/UMH-Projects/dengi/" target="_blank">dengi</a>
-                    <a href="https://risozhor.github.io/UMH-Projects/evrovision2019" target="_blank">evrovision 2019</a>
-                    <a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net" target="_blank">itogi2020.korrespondent.net</a>
+                    <p><a href="https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net" target="_blank">uasp.korrespondent.net </a></p>
+                    <p><a href="https://risozhor.github.io/UMH-Projects/2020.footbal.ua " target="_blank">2020.footbal.ua</a></p>
+                    <p><a href="https://risozhor.github.io/UMH-Projects/afisha " target="_blank">afisha</a></p>
+                    <p><a href="https://risozhor.github.io/UMH-Projects/alexandrion.korrespondent.net" target="_blank">alexandrion.korrespondent.net</a></p>
+                    <p><a href="https://risozhor.github.io/UMH-Projects/dengi/" target="_blank">dengi</a></p>
+                    <p><a href="https://risozhor.github.io/UMH-Projects/evrovision2019" target="_blank">evrovision 2019</a></p>
+                    <p><a href="https://risozhor.github.io/UMH-Projects/sp1/itogi2020.korrespondent.net" target="_blank">itogi2020.korrespondent.net</a></p>
                 </div>
             </div> 
         </div>
