--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10 sp-cont-center"> 
+            <div class="col-12 col-sm-12 col-md-6 col-lg-4 mt10"> 
                 <div class="sp-square">
                     <p><a href="https://risozhor.github.io/UMH-Projects/uasp.korrespondent.net" target="_blank">uasp.korrespondent.net </a></p>
                     <p><a href="https://risozhor.github.io/UMH-Projects/2020.footbal.ua " target="_blank">2020.footbal.ua</a></p>
